# fcn-morphology-isic2018

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.hr.md  README.md  cloud_runner.ipynb  pyproject.toml  requirements.txt
.github/workflows/: build-latex.yml
data/: README.md  download_dataset.py  download_dataset.sh
src/: __init__.py  main.py
